force-app/main/default/objects/permit__c/permit__c.object-meta.xml
<CustomObject>
    <label>permit</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>permit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>permits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>