force-app/main/default/objects/permit__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>The date the permit expires</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>