force-app/main/default/objects/permit__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <description>The date the permit was issued.</description>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>