force-app/main/default/objects/permit__c/fields/Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>Permit_Number__c</fullName>
    <description>A unique identifier for each permit.</description>
    <label>Permit Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>